Update routes & swagger
